# KV_Raft_

./: .gitignore  CMakeLists.txt  ClientSession.cpp  ClientSession.hpp  CodeRunner.py  Node.cpp  Node.hpp  Server.cpp  build.rsp  dockerfile  readme.md
.github/workflows/: dockerbuild.yml
ProjectFiles/: ClientSession.cpp  ClientSession.hpp  Node.cpp  Node.hpp  Server.cpp  Types.h
